# yandex_tracker_gant_creator

./: .env.example  .gitignore  README.md  plan.example.toml  pyproject.toml  ИНСТРУКЦИЯ.md
onec/: README.md  Запрос_ГрафикДоступности.txt  МодульHTTPСервиса.bsl
src/planner/: calendar_ru.py  capacity.py  cli.py  config.py  release_plan.py  report.py  report_gantt.py  scheduler.py  shifts.py  tracker.py
